--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ Debug/
 Release/
 out/
 build/
-data/
+data/output/*
 
 
 # Visual Studio
@@ -12,6 +12,5 @@ data/
 *.user
 *.VC.db
 *.VC.VC.opendb
-*.sln
-*.vcxproj
-*.vcxproj.*
+*.suo
+*.ipch
