--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,18 @@
-name: Build
+name: Build + Test + Docs
 
 on:
   push:
     branches: ["main"]
   pull_request:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
   windows:
@@ -59,3 +68,34 @@ jobs:
         shell: pwsh
         run: |
           ctest --test-dir build --output-on-failure
+
+      # --------------------------
+      # Generate Doxygen Docs
+      # --------------------------
+      - name: Install Doxygen
+        shell: pwsh
+        run: |
+          choco install doxygen.install -y
+
+      - name: Generate Doxygen docs
+        shell: pwsh
+        run: |
+          doxygen Doxyfile
+
+      # --------------------------
+      # Publish to GitHub Pages
+      # --------------------------
+      - name: Setup Pages
+        if: github.ref == 'refs/heads/main'
+        uses: actions/configure-pages@v5
+
+      - name: Upload Pages artifact
+        if: github.ref == 'refs/heads/main'
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: docs
+
+      - name: Deploy to GitHub Pages
+        if: github.ref == 'refs/heads/main'
+        id: deployment
+        uses: actions/deploy-pages@v4
